--- a/metadata.yaml
+++ b/metadata.yaml
@@ -36,5 +36,6 @@ subjects:
 - !lcsh 'India -- Social life and customs -- Fiction'
 - !lcc 'PK'
 - !lcsh 'Triangles (Interpersonal relations) -- Fiction'
+- GITenberg
 title: 'The Poison Tree: A Tale of Hindu Life in Bengal'
 url: http://www.gutenberg.org/ebooks/17455
